Fix flex-behavior on mobile for nav/details

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -204,7 +204,7 @@ kbd {
     .container {
       flex-direction: column;
       > nav, > details {
-        flex-basis: auto;
+        flex: 0 0;
       }
       > main {
         padding-left: 0;
